Fix Anzeigen hint text (spacings, text size and color )

--- a/frontend/src/app/formly/types/map/spatial-dialog/wkt-spatial/wkt-spatial.component.scss
+++ b/frontend/src/app/formly/types/map/spatial-dialog/wkt-spatial/wkt-spatial.component.scss
@@ -7,3 +7,12 @@
   padding: 0px !important;
   margin-bottom: -10px !important;
 }
+
+.hint-text-custom-style {
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 0.4px;
+  padding: 6px !important;
+  color: rgba(0, 0, 0, 0.87);
+  opacity: 0.6;
+}
